--- a/SENL/Metodos Cerrados/Biseccion/lib/i386-win32/main.lfm
+++ b/SENL/Metodos Cerrados/Biseccion/lib/i386-win32/main.lfm
@@ -1,9 +1,9 @@
 object Form1: TForm1
-  Left = 304
+  Left = 311
   Height = 670
-  Top = 184
+  Top = 148
   Width = 820
-  Caption = 'Form1'
+  Caption = 'Biseccion'
   ClientHeight = 670
   ClientWidth = 820
   DesignTimePPI = 120
