--- a/SENL/Metodos Abiertos/Newton/lib/i386-win32/main.lfm
+++ b/SENL/Metodos Abiertos/Newton/lib/i386-win32/main.lfm
@@ -1,85 +1,173 @@
 object Form1: TForm1
-  Left = 285
-  Height = 732
-  Top = 123
-  Width = 833
+  Left = 263
+  Height = 780
+  Top = 53
+  Width = 1007
   Caption = 'Newton'
-  ClientHeight = 732
-  ClientWidth = 833
+  ClientHeight = 780
+  ClientWidth = 1007
   DesignTimePPI = 120
+  OnCreate = FormCreate
+  OnDestroy = FormDestroy
   LCLVersion = '1.8.4.0'
-  object TGrid: TStringGrid
-    Left = 32
-    Height = 332
-    Top = 208
-    Width = 760
-    AutoFillColumns = True
-    FixedCols = 0
-    TabOrder = 0
-    ColWidths = (
-      151
-      151
-      151
-      151
-      152
-    )
-  end
-  object Button1: TButton
-    Left = 570
-    Height = 31
-    Top = 151
-    Width = 94
-    Caption = 'Ejecutar'
-    OnClick = Button1Click
-    TabOrder = 1
-  end
-  object Num1: TEdit
-    Left = 264
-    Height = 28
-    Top = 151
-    Width = 100
-    OnChange = Num1Change
-    TabOrder = 2
-    Text = '1.5'
-  end
-  object TError: TEdit
-    Left = 416
-    Height = 28
-    Top = 151
-    Width = 100
-    TabOrder = 3
-    Text = '0.0001'
-  end
-  object Label1: TLabel
-    Left = 264
+  object LabelIt: TLabel
+    Left = 384
     Height = 20
-    Top = 120
-    Width = 9
-    Caption = 'X'
-    ParentColor = False
-  end
-  object Label3: TLabel
-    Left = 416
-    Height = 20
-    Top = 120
-    Width = 32
-    Caption = 'Error'
+    Top = 74
+    Width = 85
+    Caption = 'Iteraciones: -'
     ParentColor = False
   end
   object LabelResult: TLabel
-    Left = 152
+    Left = 384
     Height = 20
-    Top = 569
+    Top = 40
     Width = 134
     Caption = 'Valor Aproximado: -'
     ParentColor = False
   end
-  object LabelIt: TLabel
+  object Label3: TLabel
     Left = 152
     Height = 20
-    Top = 603
-    Width = 85
-    Caption = 'Iteraciones: -'
+    Top = 136
+    Width = 32
+    Caption = 'Error'
     ParentColor = False
+  end
+  object Label1: TLabel
+    Left = 32
+    Height = 20
+    Top = 136
+    Width = 9
+    Caption = 'X'
+    ParentColor = False
+  end
+  object TError: TEdit
+    Left = 152
+    Height = 28
+    Top = 167
+    Width = 100
+    TabOrder = 0
+    Text = '0.00001'
+  end
+  object Num1: TEdit
+    Left = 32
+    Height = 28
+    Top = 167
+    Width = 100
+    TabOrder = 1
+    Text = '1'
+  end
+  object Button1: TButton
+    Left = 336
+    Height = 31
+    Top = 167
+    Width = 94
+    Caption = 'Ejecutar'
+    OnClick = Button1Click
+    TabOrder = 2
+  end
+  object TGrid: TStringGrid
+    Left = 8
+    Height = 524
+    Top = 208
+    Width = 296
+    AutoFillColumns = True
+    FixedCols = 0
+    TabOrder = 3
+    ColWidths = (
+      58
+      58
+      58
+      58
+      60
+    )
+  end
+  object Label2: TLabel
+    Left = 32
+    Height = 20
+    Top = 8
+    Width = 51
+    Caption = 'Funcion'
+    ParentColor = False
+  end
+  object ediF: TEdit
+    Left = 32
+    Height = 28
+    Top = 39
+    Width = 220
+    TabOrder = 4
+    Text = '3*x^5+4*x^4-8*x^3-7*x+4'
+  end
+  object Chart1: TChart
+    Left = 312
+    Height = 548
+    Top = 208
+    Width = 669
+    AntialiasingMode = amOn
+    AxisList = <    
+      item
+        Marks.LabelBrush.Style = bsClear
+        Minors = <>
+        Title.LabelFont.Orientation = 900
+        Title.LabelBrush.Style = bsClear
+      end    
+      item
+        Alignment = calBottom
+        Marks.LabelBrush.Style = bsClear
+        Minors = <>
+        Title.LabelBrush.Style = bsClear
+      end>
+    BackColor = clWhite
+    Extent.UseXMax = True
+    Extent.UseXMin = True
+    Extent.UseYMax = True
+    Extent.UseYMin = True
+    Extent.XMax = 10
+    Extent.XMin = -10
+    Extent.YMax = 10
+    Extent.YMin = -10
+    Foot.Brush.Color = clBtnFace
+    Foot.Font.Color = clBlue
+    Title.Brush.Color = clBtnFace
+    Title.Font.Color = clBlue
+    Title.Text.Strings = (
+      'TAChart'
+    )
+    object Chart1ConstantLine1: TConstantLine
+      Position = 0
+    end
+    object Chart1ConstantLine2: TConstantLine
+      LineStyle = lsVertical
+      Position = 0
+    end
+    object Func: TFuncSeries
+      Active = False
+      OnCalculate = FuncCalculate
+    end
+    object Chart1LineSeries1: TLineSeries
+      LinePen.Color = clRed
+      LinePen.Width = 5
+      Pointer.HorizSize = 5
+      Pointer.Pen.Color = clRed
+      Pointer.Style = psCircle
+      Pointer.VertSize = 5
+    end
+  end
+  object Label4: TLabel
+    Left = 32
+    Height = 20
+    Top = 72
+    Width = 60
+    Caption = 'Derivada'
+    ParentColor = False
+  end
+  object ediDF: TEdit
+    Left = 32
+    Height = 28
+    Top = 103
+    Width = 220
+    TabOrder = 6
+    Text = '15*x^4+16*x^3-24*x^2-7'
   end
 end
