--- a/SENL/Metodos Abiertos/Secante_h/lib/i386-win32/main.lfm
+++ b/SENL/Metodos Abiertos/Secante_h/lib/i386-win32/main.lfm
@@ -1,84 +1,157 @@
 object Form1: TForm1
-  Left = 216
-  Height = 791
-  Top = 12
-  Width = 955
+  Left = 361
+  Height = 763
+  Top = 72
+  Width = 1012
   Caption = 'Secante'
-  ClientHeight = 791
-  ClientWidth = 955
+  ClientHeight = 763
+  ClientWidth = 1012
   DesignTimePPI = 120
+  OnCreate = FormCreate
+  OnDestroy = FormDestroy
   LCLVersion = '1.8.4.0'
   object TGrid: TStringGrid
-    Left = 64
-    Height = 332
+    Left = 8
+    Height = 568
     Top = 184
-    Width = 760
+    Width = 288
     AutoFillColumns = True
     FixedCols = 0
     TabOrder = 0
     ColWidths = (
-      151
-      151
-      151
-      151
-      152
+      56
+      56
+      56
+      56
+      60
     )
   end
   object Button1: TButton
-    Left = 602
+    Left = 336
     Height = 31
-    Top = 127
+    Top = 128
     Width = 94
     Caption = 'Ejecutar'
     OnClick = Button1Click
     TabOrder = 1
   end
   object Num1: TEdit
-    Left = 296
+    Left = 32
     Height = 28
-    Top = 127
+    Top = 135
     Width = 100
     TabOrder = 2
     Text = '1.5'
   end
   object TError: TEdit
-    Left = 448
+    Left = 184
     Height = 28
-    Top = 127
+    Top = 135
     Width = 100
     TabOrder = 3
     Text = '0.0001'
   end
   object Label1: TLabel
-    Left = 296
+    Left = 32
     Height = 20
-    Top = 96
+    Top = 104
     Width = 9
     Caption = 'X'
     ParentColor = False
   end
   object Label3: TLabel
-    Left = 448
+    Left = 184
     Height = 20
-    Top = 96
+    Top = 104
     Width = 32
     Caption = 'Error'
     ParentColor = False
   end
   object LabelResult: TLabel
-    Left = 184
+    Left = 336
     Height = 20
-    Top = 545
+    Top = 40
     Width = 134
     Caption = 'Valor Aproximado: -'
     ParentColor = False
   end
   object LabelIt: TLabel
-    Left = 184
+    Left = 336
     Height = 20
-    Top = 579
+    Top = 74
     Width = 85
     Caption = 'Iteraciones: -'
+    ParentColor = False
+  end
+  object ediF: TEdit
+    Left = 32
+    Height = 28
+    Top = 55
+    Width = 220
+    TabOrder = 4
+    Text = '3*x^5+4*x^4-8*x^3-7*x+4'
+  end
+  object Chart1: TChart
+    Left = 304
+    Height = 548
+    Top = 184
+    Width = 669
+    AntialiasingMode = amOn
+    AxisList = <    
+      item
+        Marks.LabelBrush.Style = bsClear
+        Minors = <>
+        Title.LabelFont.Orientation = 900
+        Title.LabelBrush.Style = bsClear
+      end    
+      item
+        Alignment = calBottom
+        Marks.LabelBrush.Style = bsClear
+        Minors = <>
+        Title.LabelBrush.Style = bsClear
+      end>
+    BackColor = clWhite
+    Extent.UseXMax = True
+    Extent.UseXMin = True
+    Extent.UseYMax = True
+    Extent.UseYMin = True
+    Extent.XMax = 10
+    Extent.XMin = -10
+    Extent.YMax = 10
+    Extent.YMin = -10
+    Foot.Brush.Color = clBtnFace
+    Foot.Font.Color = clBlue
+    Title.Brush.Color = clBtnFace
+    Title.Font.Color = clBlue
+    Title.Text.Strings = (
+      'TAChart'
+    )
+    object Chart1ConstantLine1: TConstantLine
+      Position = 0
+    end
+    object Chart1ConstantLine2: TConstantLine
+      LineStyle = lsVertical
+      Position = 0
+    end
+    object Func: TFuncSeries
+      Active = False
+      OnCalculate = FuncCalculate
+    end
+    object Chart1LineSeries1: TLineSeries
+      LinePen.Color = clRed
+      LinePen.Width = 5
+      Pointer.HorizSize = 5
+      Pointer.Pen.Color = clRed
+      Pointer.Style = psCircle
+      Pointer.VertSize = 5
+    end
+  end
+  object Label2: TLabel
+    Left = 32
+    Height = 20
+    Top = 24
+    Width = 51
+    Caption = 'Funcion'
     ParentColor = False
   end
 end
