--- a/SENL/Metodos Cerrados/Biseccion/main.lfm
+++ b/SENL/Metodos Cerrados/Biseccion/main.lfm
@@ -1,100 +1,165 @@
 object Form1: TForm1
-  Left = 311
-  Height = 670
-  Top = 148
-  Width = 820
+  Left = 327
+  Height = 720
+  Top = 113
+  Width = 1141
   Caption = 'Biseccion'
-  ClientHeight = 670
-  ClientWidth = 820
+  ClientHeight = 720
+  ClientWidth = 1141
   DesignTimePPI = 120
+  OnCreate = FormCreate
+  OnDestroy = FormDestroy
   LCLVersion = '1.8.4.0'
   object StringGrid1: TStringGrid
-    Left = 32
-    Height = 332
-    Top = 208
-    Width = 760
+    Left = 40
+    Height = 412
+    Top = 232
+    Width = 336
     AutoFillColumns = True
     FixedCols = 0
     TabOrder = 0
     ColWidths = (
-      151
-      151
-      151
-      151
-      152
+      66
+      66
+      66
+      66
+      68
     )
   end
   object Button1: TButton
-    Left = 570
+    Left = 168
     Height = 31
-    Top = 151
+    Top = 180
     Width = 94
     Caption = 'Ejecutar'
     OnClick = Button1Click
     TabOrder = 1
   end
   object Num1: TEdit
-    Left = 136
+    Left = 40
     Height = 28
-    Top = 151
+    Top = 111
     Width = 100
     TabOrder = 2
-    Text = '1.5'
+    Text = '1'
   end
   object Num2: TEdit
-    Left = 274
+    Left = 168
     Height = 28
-    Top = 151
+    Top = 111
     Width = 100
     TabOrder = 3
-    Text = '2.5'
+    Text = '2'
   end
   object TError: TEdit
-    Left = 416
+    Left = 40
     Height = 28
-    Top = 151
+    Top = 183
     Width = 100
     TabOrder = 4
-    Text = '0.01'
+    Text = '0.0001'
   end
   object Label1: TLabel
-    Left = 136
+    Left = 40
     Height = 20
-    Top = 120
-    Width = 40
-    Caption = 'Num1'
-    ParentColor = False
-  end
-  object Label2: TLabel
-    Left = 274
-    Height = 20
-    Top = 120
-    Width = 40
-    Caption = 'Num2'
+    Top = 80
+    Width = 58
+    Caption = 'Intervalo'
     ParentColor = False
   end
   object Label3: TLabel
-    Left = 416
+    Left = 40
     Height = 20
-    Top = 120
+    Top = 152
     Width = 32
     Caption = 'Error'
     ParentColor = False
   end
   object LabelResult: TLabel
-    Left = 152
+    Left = 392
     Height = 20
-    Top = 569
+    Top = 32
     Width = 134
     Caption = 'Valor Aproximado: -'
     ParentColor = False
   end
   object LabelIt: TLabel
-    Left = 152
+    Left = 392
     Height = 20
-    Top = 603
+    Top = 66
     Width = 85
     Caption = 'Iteraciones: -'
+    ParentColor = False
+  end
+  object Chart1: TChart
+    Left = 376
+    Height = 548
+    Top = 136
+    Width = 645
+    AntialiasingMode = amOn
+    AxisList = <    
+      item
+        Marks.LabelBrush.Style = bsClear
+        Minors = <>
+        Title.LabelFont.Orientation = 900
+        Title.LabelBrush.Style = bsClear
+      end    
+      item
+        Alignment = calBottom
+        Marks.LabelBrush.Style = bsClear
+        Minors = <>
+        Title.LabelBrush.Style = bsClear
+      end>
+    BackColor = clWhite
+    Extent.UseXMax = True
+    Extent.UseXMin = True
+    Extent.UseYMax = True
+    Extent.UseYMin = True
+    Extent.XMax = 10
+    Extent.XMin = -10
+    Extent.YMax = 10
+    Extent.YMin = -10
+    Foot.Brush.Color = clBtnFace
+    Foot.Font.Color = clBlue
+    Title.Brush.Color = clBtnFace
+    Title.Font.Color = clBlue
+    Title.Text.Strings = (
+      'TAChart'
+    )
+    object Chart1ConstantLine1: TConstantLine
+      Position = 0
+    end
+    object Chart1ConstantLine2: TConstantLine
+      LineStyle = lsVertical
+      Position = 0
+    end
+    object Func: TFuncSeries
+      Active = False
+      OnCalculate = FuncCalculate
+    end
+    object Chart1LineSeries1: TLineSeries
+      LinePen.Color = clRed
+      LinePen.Width = 5
+      Pointer.HorizSize = 5
+      Pointer.Pen.Color = clRed
+      Pointer.Style = psCircle
+      Pointer.VertSize = 5
+    end
+  end
+  object EdiF: TEdit
+    Left = 40
+    Height = 28
+    Top = 47
+    Width = 220
+    TabOrder = 6
+    Text = '3*x^5+4*x^4-8*x^3-7*x+4'
+  end
+  object Label2: TLabel
+    Left = 40
+    Height = 20
+    Top = 16
+    Width = 51
+    Caption = 'Funcion'
     ParentColor = False
   end
 end
