--- a/SENL/Metodos Cerrados/Falsa Posicion/main.lfm
+++ b/SENL/Metodos Cerrados/Falsa Posicion/main.lfm
@@ -1,100 +1,163 @@
 object Form1: TForm1
-  Left = 306
-  Height = 764
-  Top = 136
-  Width = 950
+  Left = 586
+  Height = 738
+  Top = 163
+  Width = 1027
   Caption = 'Falsa Posicion'
-  ClientHeight = 764
-  ClientWidth = 950
+  ClientHeight = 738
+  ClientWidth = 1027
   DesignTimePPI = 120
+  OnCreate = FormCreate
+  OnDestroy = FormDestroy
   LCLVersion = '1.8.4.0'
   object StringGrid1: TStringGrid
-    Left = 96
-    Height = 332
-    Top = 200
-    Width = 760
+    Left = 40
+    Height = 460
+    Top = 232
+    Width = 296
     AutoFillColumns = True
     FixedCols = 0
     TabOrder = 0
     ColWidths = (
-      151
-      151
-      151
-      151
-      152
+      58
+      58
+      58
+      58
+      60
     )
   end
   object Button1: TButton
-    Left = 634
+    Left = 178
     Height = 31
-    Top = 143
+    Top = 184
     Width = 94
     Caption = 'Ejecutar'
     OnClick = Button1Click
     TabOrder = 1
   end
   object Num1: TEdit
-    Left = 200
+    Left = 40
     Height = 28
-    Top = 143
+    Top = 119
     Width = 100
     TabOrder = 2
-    Text = '1.4'
+    Text = '1'
   end
   object Num2: TEdit
-    Left = 338
+    Left = 160
     Height = 28
-    Top = 143
+    Top = 119
     Width = 100
     TabOrder = 3
-    Text = '4'
+    Text = '2'
   end
   object TError: TEdit
-    Left = 480
+    Left = 40
     Height = 28
-    Top = 143
+    Top = 191
     Width = 100
     TabOrder = 4
     Text = '0.0001'
   end
-  object Label1: TLabel
-    Left = 200
-    Height = 20
-    Top = 112
-    Width = 40
-    Caption = 'Num1'
-    ParentColor = False
-  end
-  object Label2: TLabel
-    Left = 338
-    Height = 20
-    Top = 112
-    Width = 40
-    Caption = 'Num2'
-    ParentColor = False
-  end
   object Label3: TLabel
-    Left = 480
+    Left = 40
     Height = 20
-    Top = 112
+    Top = 160
     Width = 32
     Caption = 'Error'
     ParentColor = False
   end
   object LabelResult: TLabel
-    Left = 216
+    Left = 432
     Height = 20
-    Top = 561
+    Top = 32
     Width = 134
     Caption = 'Valor Aproximado: -'
     ParentColor = False
   end
   object LabelIt: TLabel
-    Left = 216
+    Left = 432
     Height = 20
-    Top = 595
+    Top = 66
     Width = 85
     Caption = 'Iteraciones: -'
     ParentColor = False
+  end
+  object Label4: TLabel
+    Left = 40
+    Height = 20
+    Top = 72
+    Width = 58
+    Caption = 'Intervalo'
+    ParentColor = False
+  end
+  object EdiF: TEdit
+    Left = 40
+    Height = 28
+    Top = 39
+    Width = 220
+    TabOrder = 5
+    Text = '3*x^5+4*x^4-8*x^3-7*x+4'
+  end
+  object Label5: TLabel
+    Left = 40
+    Height = 20
+    Top = 8
+    Width = 51
+    Caption = 'Funcion'
+    ParentColor = False
+  end
+  object Chart1: TChart
+    Left = 344
+    Height = 548
+    Top = 144
+    Width = 645
+    AxisList = <    
+      item
+        Marks.LabelBrush.Style = bsClear
+        Minors = <>
+        Title.LabelFont.Orientation = 900
+        Title.LabelBrush.Style = bsClear
+      end    
+      item
+        Alignment = calBottom
+        Marks.LabelBrush.Style = bsClear
+        Minors = <>
+        Title.LabelBrush.Style = bsClear
+      end>
+    BackColor = clWhite
+    Extent.UseXMax = True
+    Extent.UseXMin = True
+    Extent.UseYMax = True
+    Extent.UseYMin = True
+    Extent.XMax = 10
+    Extent.XMin = -10
+    Extent.YMax = 10
+    Extent.YMin = -10
+    Foot.Brush.Color = clBtnFace
+    Foot.Font.Color = clBlue
+    Title.Brush.Color = clBtnFace
+    Title.Font.Color = clBlue
+    Title.Text.Strings = (
+      'TAChart'
+    )
+    object Chart1ConstantLine1: TConstantLine
+      Position = 0
+    end
+    object Chart1ConstantLine2: TConstantLine
+      LineStyle = lsVertical
+      Position = 0
+    end
+    object Func: TFuncSeries
+      Active = False
+      OnCalculate = FuncCalculate
+    end
+    object Chart1LineSeries1: TLineSeries
+      LinePen.Color = clRed
+      Pointer.HorizSize = 5
+      Pointer.Pen.Color = clRed
+      Pointer.Style = psCircle
+      Pointer.VertSize = 5
+    end
   end
 end
