--- a/SENL/Metodos Abiertos/Secante 2v/main.lfm
+++ b/SENL/Metodos Abiertos/Secante 2v/main.lfm
@@ -1,100 +1,175 @@
 object Form1: TForm1
-  Left = 271
-  Height = 663
-  Top = 110
-  Width = 923
+  Left = 232
+  Height = 717
+  Top = 57
+  Width = 1048
   Caption = 'Secante'
-  ClientHeight = 663
-  ClientWidth = 923
+  ClientHeight = 717
+  ClientWidth = 1048
   DesignTimePPI = 120
+  OnCreate = FormCreate
+  OnDestroy = FormDestroy
   LCLVersion = '1.8.4.0'
   object TGrid: TStringGrid
-    Left = 96
-    Height = 332
-    Top = 200
-    Width = 760
+    Left = 24
+    Height = 432
+    Top = 232
+    Width = 264
     AutoFillColumns = True
     FixedCols = 0
     TabOrder = 0
     ColWidths = (
-      151
-      151
-      151
-      151
-      152
+      52
+      52
+      52
+      52
+      52
     )
   end
   object Button1: TButton
-    Left = 634
+    Left = 184
     Height = 31
-    Top = 143
+    Top = 191
     Width = 94
     Caption = 'Ejecutar'
     OnClick = Button1Click
     TabOrder = 1
   end
   object Num1: TEdit
-    Left = 200
+    Left = 40
     Height = 28
-    Top = 143
+    Top = 111
     Width = 100
     TabOrder = 2
     Text = '1.4'
   end
   object Num2: TEdit
-    Left = 338
+    Left = 178
     Height = 28
-    Top = 143
+    Top = 111
     Width = 100
     TabOrder = 3
     Text = '4'
   end
   object TError: TEdit
-    Left = 480
+    Left = 40
     Height = 28
-    Top = 143
+    Top = 184
     Width = 100
     TabOrder = 4
-    Text = '0.0001'
+    Text = '0.00001'
   end
   object Label1: TLabel
-    Left = 200
+    Left = 40
     Height = 20
-    Top = 112
+    Top = 80
     Width = 17
     Caption = 'X0'
     ParentColor = False
   end
-  object Label2: TLabel
-    Left = 338
-    Height = 20
-    Top = 112
-    Width = 17
-    Caption = 'X1'
-    ParentColor = False
-  end
   object Label3: TLabel
-    Left = 480
+    Left = 40
     Height = 20
-    Top = 112
+    Top = 152
     Width = 32
     Caption = 'Error'
     ParentColor = False
   end
   object LabelResult: TLabel
-    Left = 216
+    Left = 328
     Height = 20
-    Top = 561
+    Top = 39
     Width = 134
     Caption = 'Valor Aproximado: -'
     ParentColor = False
   end
   object LabelIt: TLabel
-    Left = 216
+    Left = 328
     Height = 20
-    Top = 595
+    Top = 73
     Width = 85
     Caption = 'Iteraciones: -'
+    ParentColor = False
+  end
+  object Chart1: TChart
+    Left = 328
+    Height = 576
+    Top = 120
+    Width = 672
+    AntialiasingMode = amOn
+    AxisList = <    
+      item
+        Marks.LabelBrush.Style = bsClear
+        Minors = <>
+        Title.LabelFont.Orientation = 900
+        Title.LabelBrush.Style = bsClear
+      end    
+      item
+        Alignment = calBottom
+        Marks.LabelBrush.Style = bsClear
+        Minors = <>
+        Title.LabelBrush.Style = bsClear
+      end>
+    BackColor = clWhite
+    Extent.UseXMax = True
+    Extent.UseXMin = True
+    Extent.UseYMax = True
+    Extent.UseYMin = True
+    Extent.XMax = 5
+    Extent.XMin = -5
+    Extent.YMax = 5
+    Extent.YMin = -5
+    Foot.Brush.Color = clBtnFace
+    Foot.Font.Color = clBlue
+    Title.Brush.Color = clBtnFace
+    Title.Font.Color = clBlue
+    Title.Text.Strings = (
+      'TAChart'
+    )
+    object Chart1ConstantLine1: TConstantLine
+      Position = 0
+    end
+    object Chart1ConstantLine2: TConstantLine
+      LineStyle = lsVertical
+      Position = 0
+    end
+    object Func: TFuncSeries
+      Active = False
+      OnCalculate = FuncCalculate
+      Pen.Color = clRed
+      Pen.Width = 2
+    end
+    object Chart1LineSeries1: TLineSeries
+      LinePen.Width = 3
+      Pointer.HorizSize = 5
+      Pointer.Pen.Color = clBlue
+      Pointer.Pen.Width = 2
+      Pointer.Style = psCircle
+      Pointer.VertSize = 5
+    end
+  end
+  object EdiF: TEdit
+    Left = 40
+    Height = 28
+    Top = 39
+    Width = 238
+    TabOrder = 6
+    Text = '3*x^5+4*x^4-8*x^3-7*x+4'
+  end
+  object Label5: TLabel
+    Left = 40
+    Height = 20
+    Top = 8
+    Width = 51
+    Caption = 'Funcion'
+    ParentColor = False
+  end
+  object Label2: TLabel
+    Left = 178
+    Height = 20
+    Top = 80
+    Width = 17
+    Caption = 'X1'
     ParentColor = False
   end
 end
