--- a/SENL/Metodos Abiertos/Secante_h/lib/i386-win32/main.lfm
+++ b/SENL/Metodos Abiertos/Secante_h/lib/i386-win32/main.lfm
@@ -91,11 +91,19 @@ object Form1: TForm1
     TabOrder = 4
     Text = '3*x^5+4*x^4-8*x^3-7*x+4'
   end
+  object Label2: TLabel
+    Left = 32
+    Height = 20
+    Top = 24
+    Width = 51
+    Caption = 'Funcion'
+    ParentColor = False
+  end
   object Chart1: TChart
-    Left = 304
-    Height = 548
+    Left = 312
+    Height = 568
     Top = 184
-    Width = 669
+    Width = 680
     AntialiasingMode = amOn
     AxisList = <    
       item
@@ -115,10 +123,10 @@ object Form1: TForm1
     Extent.UseXMin = True
     Extent.UseYMax = True
     Extent.UseYMin = True
-    Extent.XMax = 10
-    Extent.XMin = -10
-    Extent.YMax = 10
-    Extent.YMin = -10
+    Extent.XMax = 5
+    Extent.XMin = -5
+    Extent.YMax = 5
+    Extent.YMin = -5
     Foot.Brush.Color = clBtnFace
     Foot.Font.Color = clBlue
     Title.Brush.Color = clBtnFace
@@ -136,22 +144,16 @@ object Form1: TForm1
     object Func: TFuncSeries
       Active = False
       OnCalculate = FuncCalculate
+      Pen.Color = clRed
+      Pen.Width = 2
     end
     object Chart1LineSeries1: TLineSeries
-      LinePen.Color = clRed
-      LinePen.Width = 5
+      LinePen.Width = 3
       Pointer.HorizSize = 5
-      Pointer.Pen.Color = clRed
+      Pointer.Pen.Color = clBlue
+      Pointer.Pen.Width = 2
       Pointer.Style = psCircle
       Pointer.VertSize = 5
     end
-  end
-  object Label2: TLabel
-    Left = 32
-    Height = 20
-    Top = 24
-    Width = 51
-    Caption = 'Funcion'
-    ParentColor = False
   end
 end
