--- a/SENL/Metodos Cerrados/Falsa Posicion/main.lfm
+++ b/SENL/Metodos Cerrados/Falsa Posicion/main.lfm
@@ -57,7 +57,7 @@ object Form1: TForm1
     Top = 191
     Width = 100
     TabOrder = 4
-    Text = '0.0001'
+    Text = '0.00001'
   end
   object Label3: TLabel
     Left = 40
@@ -68,7 +68,7 @@ object Form1: TForm1
     ParentColor = False
   end
   object LabelResult: TLabel
-    Left = 432
+    Left = 344
     Height = 20
     Top = 32
     Width = 134
@@ -76,7 +76,7 @@ object Form1: TForm1
     ParentColor = False
   end
   object LabelIt: TLabel
-    Left = 432
+    Left = 344
     Height = 20
     Top = 66
     Width = 85
@@ -109,9 +109,10 @@ object Form1: TForm1
   end
   object Chart1: TChart
     Left = 344
-    Height = 548
-    Top = 144
-    Width = 645
+    Height = 576
+    Top = 128
+    Width = 672
+    AntialiasingMode = amOn
     AxisList = <    
       item
         Marks.LabelBrush.Style = bsClear
@@ -130,10 +131,10 @@ object Form1: TForm1
     Extent.UseXMin = True
     Extent.UseYMax = True
     Extent.UseYMin = True
-    Extent.XMax = 10
-    Extent.XMin = -10
-    Extent.YMax = 10
-    Extent.YMin = -10
+    Extent.XMax = 5
+    Extent.XMin = -5
+    Extent.YMax = 5
+    Extent.YMin = -5
     Foot.Brush.Color = clBtnFace
     Foot.Font.Color = clBlue
     Title.Brush.Color = clBtnFace
@@ -151,11 +152,14 @@ object Form1: TForm1
     object Func: TFuncSeries
       Active = False
       OnCalculate = FuncCalculate
+      Pen.Color = clRed
+      Pen.Width = 2
     end
     object Chart1LineSeries1: TLineSeries
-      LinePen.Color = clRed
+      LinePen.Width = 3
       Pointer.HorizSize = 5
-      Pointer.Pen.Color = clRed
+      Pointer.Pen.Color = clBlue
+      Pointer.Pen.Width = 2
       Pointer.Style = psCircle
       Pointer.VertSize = 5
     end
