--- a/Grafica de funciones multiples puntos/backup/main.lfm
+++ b/Grafica de funciones multiples puntos/backup/main.lfm
@@ -1,29 +1,29 @@
 object Form1: TForm1
-  Left = 413
-  Height = 710
-  Top = 154
+  Left = 888
+  Height = 711
+  Top = 190
   Width = 1022
   Align = alClient
   Caption = 'Grafica de Funciones'
-  ClientHeight = 0
-  ClientWidth = 0
+  ClientHeight = 711
+  ClientWidth = 1022
   DesignTimePPI = 120
   OnCreate = FormCreate
   OnDestroy = FormDestroy
   LCLVersion = '1.8.4.0'
   object PFuncs: TPanel
     Left = 0
-    Height = 710
+    Height = 711
     Top = 0
     Width = 230
     Align = alLeft
     BorderWidth = 3
-    ClientHeight = 710
+    ClientHeight = 711
     ClientWidth = 230
     TabOrder = 0
     object ScrollBox1: TScrollBox
       Left = 4
-      Height = 702
+      Height = 653
       Top = 4
       Width = 222
       HorzScrollBar.Increment = 1
@@ -34,21 +34,40 @@ object Form1: TForm1
       Align = alClient
       TabOrder = 0
     end
+    object Panel4: TPanel
+      Left = 4
+      Height = 50
+      Top = 657
+      Width = 222
+      Align = alBottom
+      ClientHeight = 50
+      ClientWidth = 222
+      TabOrder = 1
+      object Button1: TButton
+        Left = 32
+        Height = 35
+        Top = 8
+        Width = 160
+        Caption = 'Eliminar funciones'
+        OnClick = Button1Click
+        TabOrder = 0
+      end
+    end
   end
   object Panel3: TPanel
     Left = 230
-    Height = 710
+    Height = 711
     Top = 0
     Width = 792
     Align = alClient
     Caption = 'Panel3'
-    ClientHeight = 710
+    ClientHeight = 711
     ClientWidth = 792
     TabOrder = 1
     object Panel2: TPanel
       Left = 1
       Height = 94
-      Top = 615
+      Top = 616
       Width = 790
       Align = alBottom
       ClientHeight = 94
@@ -116,27 +135,29 @@ object Form1: TForm1
     end
     object Panel1: TPanel
       Left = 1
-      Height = 614
+      Height = 615
       Top = 1
       Width = 790
       Align = alClient
       BorderWidth = 2
-      ClientHeight = 614
+      ClientHeight = 615
       ClientWidth = 790
       TabOrder = 1
       object Chart1: TChart
         Left = 3
-        Height = 608
+        Height = 609
         Top = 3
         Width = 784
         AxisList = <        
           item
+            Grid.Color = clSkyBlue
             Marks.LabelBrush.Style = bsClear
             Minors = <>
             Title.LabelFont.Orientation = 900
             Title.LabelBrush.Style = bsClear
           end        
           item
+            Grid.Color = clSkyBlue
             Alignment = calBottom
             Marks.LabelBrush.Style = bsClear
             Minors = <>
@@ -161,7 +182,7 @@ object Form1: TForm1
         Toolset = ToolSet
         Align = alClient
         Color = clForm
-        object Chart1LineSeries1: TLineSeries
+        object Points: TLineSeries
           Marks.Format = '%2:s'
           Marks.LinkPen.Color = clActiveBorder
           Marks.LinkPen.Width = 2
@@ -172,16 +193,15 @@ object Form1: TForm1
           Pointer.Pen.Width = 2
           Pointer.Style = psCircle
         end
-        object Chart1ConstantLine1: TConstantLine
+        object HorizontalLine: TConstantLine
           Position = 0
         end
-        object Chart1ConstantLine2: TConstantLine
+        object VerticalLine: TConstantLine
           LineStyle = lsVertical
           Position = 0
         end
         object Func: TFuncSeries
           Active = False
-          OnCalculate = FuncCalculate
           Pen.Width = 2
         end
       end
@@ -200,9 +220,12 @@ object Form1: TForm1
     end
     object PanDrag: TPanDragTool
       Shift = [ssRight]
+      OnAfterMouseUp = PanDragAfterMouseUp
     end
     object ZoomMouseWheel: TZoomMouseWheelTool
       Shift = [ssScroll]
+    end
+    object oolSetZoomMouseWheelTool1: TZoomMouseWheelTool
     end
   end
 end
