--- a/Construccion de polinomios dadas raices/lib/i386-win32/frame.lfm
+++ b/Construccion de polinomios dadas raices/lib/i386-win32/frame.lfm
@@ -19,6 +19,7 @@ object Raices: TRaices
     BorderSpacing.Top = 2
     BorderSpacing.Bottom = 2
     BorderSpacing.Around = 5
+    OnChange = EditRootChange
     OnKeyUp = EditRootKeyUp
     TabOrder = 0
   end
