--- a/Polinomios de Lagrange/main.lfm
+++ b/Polinomios de Lagrange/main.lfm
@@ -1,51 +1,83 @@
 object Form1: TForm1
-  Left = 420
-  Height = 492
-  Top = 227
-  Width = 795
+  Left = 529
+  Height = 692
+  Top = 39
+  Width = 904
   Caption = 'Form1'
-  ClientHeight = 492
-  ClientWidth = 795
+  ClientHeight = 692
+  ClientWidth = 904
   DesignTimePPI = 120
   OnCreate = FormCreate
   OnDestroy = FormDestroy
   LCLVersion = '1.8.4.0'
   object PanelClient: TPanel
     Left = 0
-    Height = 277
+    Height = 477
     Top = 215
-    Width = 795
+    Width = 904
     Align = alClient
-    ClientHeight = 277
-    ClientWidth = 795
+    ClientHeight = 477
+    ClientWidth = 904
     TabOrder = 0
-    object Memo1: TMemo
+    object Chart1: TChart
       Left = 1
-      Height = 275
+      Height = 475
       Top = 1
-      Width = 543
-      Align = alLeft
-      Enabled = False
-      TabOrder = 0
-    end
-    object LabelPx: TLabel
-      Left = 544
-      Height = 275
-      Top = 1
-      Width = 49
-      Align = alLeft
-      Caption = 'P(x) = -'
-      ParentColor = False
+      Width = 902
+      AxisList = <      
+        item
+          Grid.Color = clSkyBlue
+          Marks.LabelBrush.Style = bsClear
+          Minors = <>
+          Title.LabelFont.Orientation = 900
+          Title.LabelBrush.Style = bsClear
+        end      
+        item
+          Grid.Color = clSkyBlue
+          Alignment = calBottom
+          Marks.LabelBrush.Style = bsClear
+          Minors = <>
+          Title.LabelBrush.Style = bsClear
+        end>
+      BackColor = clHighlightText
+      Extent.UseXMax = True
+      Extent.UseXMin = True
+      Extent.UseYMax = True
+      Extent.UseYMin = True
+      Extent.XMax = 15
+      Extent.YMax = 5
+      Extent.YMin = -5
+      Foot.Brush.Color = clBtnFace
+      Foot.Font.Color = clBlue
+      Legend.Visible = True
+      Title.Brush.Color = clBtnFace
+      Title.Font.Color = clBlue
+      Title.Text.Strings = (
+        'TAChart'
+      )
+      Align = alClient
+      Color = clForm
+      object HorizontalLine: TConstantLine
+        Arrow.BaseLength = 10
+        Arrow.Visible = True
+        Position = 0
+      end
+      object VerticalLine: TConstantLine
+        Arrow.BaseLength = 10
+        Arrow.Visible = True
+        LineStyle = lsVertical
+        Position = 0
+      end
     end
   end
   object PanelXnum: TPanel
     Left = 0
     Height = 80
     Top = 0
-    Width = 795
+    Width = 904
     Align = alTop
     ClientHeight = 80
-    ClientWidth = 795
+    ClientWidth = 904
     TabOrder = 1
     object Label1: TLabel
       Left = 16
@@ -62,17 +94,27 @@ object Form1: TForm1
       Width = 100
       OnChange = EdiPointsChange
       TabOrder = 0
-      Text = '4'
+      Text = '21'
+    end
+    object Memo1: TMemo
+      Left = 232
+      Height = 73
+      Top = 8
+      Width = 668
+      Lines.Strings = (
+        'Memo1'
+      )
+      TabOrder = 1
     end
   end
   object PanelXs: TPanel
     Left = 0
     Height = 135
     Top = 80
-    Width = 795
+    Width = 904
     Align = alTop
     ClientHeight = 135
-    ClientWidth = 795
+    ClientWidth = 904
     TabOrder = 2
     object Grid1: TStringGrid
       Left = 1
@@ -80,7 +122,7 @@ object Form1: TForm1
       Top = 1
       Width = 399
       Align = alLeft
-      AutoFillColumns = True
+      ColCount = 22
       Options = [goFixedVertLine, goFixedHorzLine, goVertLine, goHorzLine, goRangeSelect, goEditing, goSmoothScroll]
       RowCount = 3
       ScrollBars = ssAutoHorizontal
@@ -91,9 +133,26 @@ object Form1: TForm1
         78
         78
         81
+        95
+        80
+        80
+        80
+        80
+        80
+        80
+        80
+        80
+        80
+        80
+        80
+        80
+        80
+        80
+        80
+        80
       )
       Cells = (
-        10
+        44
         0
         1
         'X'
@@ -102,28 +161,130 @@ object Form1: TForm1
         'Y'
         1
         1
-        '-2'
+        '0.9'
         1
         2
-        '4'
+        '1.1'
         2
         1
-        '-3'
+        '1.4'
         2
         2
-        '2'
+        '1.4'
         3
         1
-        '0'
+        '1.9'
         3
         2
-        '-2'
+        '1.9'
         4
         1
-        '1'
+        '2.1'
         4
         2
-        '-4'
+        '2.1'
+        5
+        1
+        '2.6'
+        5
+        2
+        '2.5'
+        6
+        1
+        '3'
+        6
+        2
+        '2.6'
+        7
+        1
+        '3.9'
+        7
+        2
+        '2.4'
+        8
+        1
+        '4.4'
+        8
+        2
+        '2.2'
+        9
+        1
+        '4.6'
+        9
+        2
+        '2.05'
+        10
+        1
+        '5'
+        10
+        2
+        '2.1'
+        11
+        1
+        '6'
+        11
+        2
+        '2.3'
+        12
+        1
+        '7'
+        12
+        2
+        '2.4'
+        13
+        1
+        '8'
+        13
+        2
+        '2.3'
+        14
+        1
+        '9.3'
+        14
+        2
+        '1.9'
+        15
+        1
+        '10.5'
+        15
+        2
+        '1.5'
+        16
+        1
+        '11.3'
+        16
+        2
+        '1.8'
+        17
+        1
+        '11.6'
+        17
+        2
+        '0.8'
+        18
+        1
+        '12'
+        18
+        2
+        '0.6'
+        19
+        1
+        '12.6'
+        19
+        2
+        '0.5'
+        20
+        1
+        '13'
+        20
+        2
+        '0.4'
+        21
+        1
+        '13.4'
+        21
+        2
+        '0.3'
       )
     end
     object BEjecutar: TButton
